# Gen2-UHF-RFID-Reader

./: .gitignore  README  README.md  init.sh
gr-rfid/: CMakeLists.txt  README
gr-rfid/apps/: build.sh  graph.py  reader.py  reader.sh
gr-rfid/cmake/Modules/: rfidConfig.cmake
gr-rfid/docs/: README.rfid
gr-rfid/docs/doxygen/: Doxyfile.in
gr-rfid/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-rfid/grc/: CMakeLists.txt  rfid_gate.xml  rfid_global_vars.xml  rfid_reader.xml  rfid_tag_decoder.xml
gr-rfid/include/rfid/: CMakeLists.txt  api.h  gate.h  global_vars.h  reader.h  tag_decoder.h
gr-rfid/lib/: CMakeLists.txt  IPC_controller.cc  IPC_controller.h  IPC_controller_forRN16.cc  IPC_controller_forRN16.h  gate_impl.cc  gate_impl.h  gate_makeLog.cc  global_vars.cc  qa_rfid.cc  qa_rfid.h  reader_impl.cc  reader_impl.h  reader_makeLog.cc  tag_decoder_class.cc  tag_decoder_decoder.cc  tag_decoder_impl.cc  tag_decoder_impl.h  tag_decoder_makeLog.cc  test_rfid.cc
gr-rfid/misc/code/: figure.eps  plot_signal.m
gr-rfid/python/: CMakeLists.txt  __init__.py
gr-rfid/swig/: CMakeLists.txt  rfid_swig.i
